[tool.poetry]
name = "lvmgort"
version = "0.7.0"
description = "The brains of LVM observing"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmgort"
repository = "https://github.com/sdss/lvmgort"
documentation = "https://lvmgort.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "gort", from = "src" }
]
include = ["src/gort/etc/*"]

[tool.poetry.scripts]
gort = "gort.__main__:main"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
sdsstools = "^1.2.1"
sdss-clu = "^2.1.2"
click-default-group = "^1.2.2"
setuptools = "^67.6.0"
typing-extensions = "^4.5.0"
httpx = "^0.24.1"
kubernetes = "^26.1.0"
astropy = "^5.3.1"
websockets = "^11.0.3"
peewee = "^3.16.2"
psycopg2-binary = "^2.9.6"
pandas = "^2.0.3"
jsonschema = "^4.18.3"
unclick = "^0.1.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
matplotlib = ">=3.1.1"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
black = ">=20.8b1"
Sphinx = ">=4.0.0"
furo = ">=2021.9.22"
sphinx-copybutton = ">=0.4.0"
sphinx-click = ">=3.0.1"
sphinx-jsonschema = ">=1.16.11"
myst-parser = ">=2.0.0"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
pyds9 = "^1.8.1"
sphinx-autodoc-typehints = "^1.23.2"
ruff = ">=0.0.282"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py311'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "E402"]

[tool.ruff.isort]
known-first-party = ["gort"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov gort --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/gort/*"]
omit = [
    "*/__init__.py",
    "src/gort/__main__.py",
    "src/gort/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
